<resources>
    <string name="app_name">PenguinPay</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="button_send_transaction">Send</string>
    <string name="hint_transaction_value">Transaction Value</string>
    <string name="msg_transaction_success">Transaction to %s completed with success!</string>
    <string name="button_new_transaction">New transaction</string>
    <string name="msg_error_fetching">Error fetching recipient value</string>
    <string name="msg_invalid_binary">Invalid binary number</string>
    <string name="msg_loading_recipient">Loading recipient value…</string>
    <string name="msg_exit">Press once again to exit</string>
</resources>